k8s/budget/frontend-angular/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-angular
  namespace: budget
spec:
  selector:
    matchLabels:
      app: frontend-angular
  template:
    metadata:
      labels:
        app: frontend-angular
    spec:
      containers:
        - name: frontend-angular
          image: registry.timo-hermans.nl/budget-angular:20260327.2
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred
