k8s/budget/frontend-angular/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-angular
  namespace: budget
spec:
  selector:
    app: frontend-angular
  ports:
  - port: 80
    targetPort: 8080
