k8s/budget/frontend-angular/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: budget-angular
  namespace: budget
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`budget2.timo-hermans.nl`)
      services:
        - name: frontend-angular
          port: 80
  tls:
    certResolver: default
    domains:
      - main: budget2.timo-hermans.nl
